--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -9,6 +9,7 @@
   margin-bottom: 100px;
   @media (max-width: 1270px) {
     display: block;
+    margin-bottom: 60px;
   }
 
   .product__title {
@@ -16,6 +17,7 @@
     color: color(dark);
     @include phoneScreen {
       font-size: 20px;
+      margin: 0 0 20px 0;
     }
   }
 
@@ -190,7 +192,6 @@
     padding: 16px;
     transition: all 0.3s;
     cursor: pointer;
-
     svg {
       margin-right: 12px;
 
@@ -201,7 +202,12 @@
 
 .add_obr {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-  margin-bottom: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 18px;
+  gap: 18px;
+  margin: 30px 0 130px 0;
+  @include phoneScreen {
+    margin: 20px 0 80px 0;
+    gap: 8px;
+  }
 }
