--- a/features/about/tab_job/jobModal/ModalJob.module.scss
+++ b/features/about/tab_job/jobModal/ModalJob.module.scss
@@ -9,8 +9,18 @@
     margin: 20px 0 0 0;
   }
   .modal_job {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
     label {
       align-items: flex-start;
+      margin-bottom: 0;
+    }
+    span {
+      color: color(green);
+      text-decoration: underline;
+      cursor: pointer;
+      padding-bottom: 5px;
     }
   }
 
@@ -97,7 +107,7 @@
 
   .job__modal__added__file {
     position: relative;
-    padding: 20px 0;
+    padding: 5px 0;
     display: flex;
     justify-content: flex-end;
     @media (max-width: 850px) {
@@ -161,7 +171,6 @@
             position: absolute;
             width: 12px;
             height: 12px;
-            position: absolute;
             top: 4px;
           }
   
@@ -201,7 +210,7 @@
         transform: translateY(0px);
         height: 23px;
         span {
-          margin: 0 0 0 10px;
+          margin: 0;
         }
       }
 
