--- a/features/equipment/equipmentPage/utp/UtpModalAction.module.scss
+++ b/features/equipment/equipmentPage/utp/UtpModalAction.module.scss
@@ -1,17 +1,31 @@
 .action_container {
-  div {
-    div {
+  .div_box {
+    height: 330px;
+    > div {
       border: 1px solid gray;
-      display: flex;
-      flex-direction: column;
-      margin: 5px 0;
+      display: grid;
+      grid-template-columns: 1fr;
+      margin: 1px 0;
+      padding: 5px ;
       cursor: grab;
       height: auto;
 
       input {
         border: none;
-        cursor: grab;
+        cursor: auto;
+        padding: 0;
+        margin: 0;
+        flex: 1;
+        height: 100%;
+        width: 100%;
+        line-height: 14px;
       }
     }
+  }
+  .block_button{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    bottom: 0;
   }
 }
