--- a/features/equipment/equipmentPage/utp/Utp.module.scss
+++ b/features/equipment/equipmentPage/utp/Utp.module.scss
@@ -4,6 +4,7 @@
 .utp__container {
   position: relative;
   margin-top: 30px;
+
   &__top {
     display: grid;
     grid-template-columns: 50% 48%;
@@ -70,6 +71,22 @@
     padding: 25px;
     border-radius: 12px;
     box-sizing: border-box;
+    position: relative;
+
+    .top_list_edit {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      right: 5px;
+      background-color: color(white);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      top: 5px;
+      cursor: pointer;
+    }
+
     @include ipadScreen {
       width: 100%;
       padding: 25px 0;
@@ -131,6 +148,7 @@
 .lh {
   line-height: 145%;
   color: color(dark);
+
   b {
     color: color(dark);
   }
@@ -144,6 +162,7 @@
     padding: 0;
     margin: 10px 0 50px 0;
   }
+
   &__title {
     font-style: normal;
     font-weight: 600;
@@ -153,6 +172,7 @@
     text-transform: uppercase;
     margin-bottom: 30px;
   }
+
   &__blocks {
     display: flex;
     gap: 50px;
@@ -162,6 +182,7 @@
       gap: 20px;
     }
   }
+
   &__items {
     margin-bottom: 30px;
     width: 50%;
@@ -169,26 +190,32 @@
       width: 100%;
       margin-bottom: 0;
     }
+
     .titles {
       margin-bottom: 30px;
       @include phoneScreen {
         margin-bottom: 12px;
       }
+
       .first__title {
         font-size: 20px;
         color: color(dark);
       }
+
       ul {
         margin: 13px 0 0 0;
       }
+
       li {
         margin-bottom: 12px;
         cursor: pointer;
         font-size: 18px;
         color: color(dark);
+
         label {
           margin: 0 6px 0 0;
           align-items: flex-start;
+
           input {
             padding: 11px;
           }
@@ -202,9 +229,11 @@
     @include ipadScreen {
       width: 100%;
     }
+
     &__items {
       flex-direction: column;
       display: flex;
+
       a {
         display: flex;
         align-items: center;
@@ -212,17 +241,21 @@
         font-size: 16px;
         color: #404040;
         transition: all 0.3s ease;
+
         span {
           width: 95%;
         }
+
         &:hover {
           background: color(green);
           box-shadow: 0 0 5px #dadada;
           color: color(white);
+
           path {
             fill: #fff;
           }
         }
+
         svg {
           path {
             fill: gray;
@@ -230,6 +263,7 @@
         }
       }
     }
+
     &__list {
       padding: 10px 20px;
       background-color: #f0f0f0;
@@ -251,17 +285,21 @@
     font-size: 16px;
     background-color: color(green);
     padding: 7.5px 30px;
+
     &:hover {
       background: color(green);
       color: color(white);
+
       path {
         fill: #fff;
       }
     }
+
     span {
       svg {
         width: 18px;
         transition: all .2s ease;
+
         path {
           fill: #fff !important;
         }
@@ -281,10 +319,12 @@
     background-color: grey !important;
     padding: 12px 29px;
     cursor: not-allowed;
+
     span {
       svg {
         width: 18px;
       }
+
       path {
         fill: white;
       }
