--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -22,7 +22,7 @@
       height: 10vw;
       width: 10vw;
       .added_label {
-        background-image: url('/images/add.svg');
+        background-image: url('../public/images/add.svg');
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: 10px;
