--- a/features/equipment/equipmentPage/utp/Utp.module.scss
+++ b/features/equipment/equipmentPage/utp/Utp.module.scss
@@ -75,15 +75,15 @@
 
     .top_list_edit {
       position: absolute;
-      width: 30px;
-      height: 30px;
-      right: 5px;
+      width: 20px;
+      height: 20px;
+      right: 15px;
       background-color: color(white);
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      top: 5px;
+      top: 15px;
       cursor: pointer;
     }
 
@@ -145,12 +145,25 @@
   }
 }
 
-.lh {
-  line-height: 145%;
-  color: color(dark);
+.editor {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
 
-  b {
+.block_description {
+  position: relative;
+  background: #f3f3f3;
+  border-radius: 12px;
+  padding: 25px;
+
+  .lh {
+    line-height: 145%;
     color: color(dark);
+
+    b {
+      color: color(dark);
+    }
   }
 }
 
