--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -117,6 +117,44 @@
   .add_video {
     margin: 80px 0 0 0;
   }
+
+  .add__form__item {
+
+    &__input {
+      font-size: 12px;
+
+      .overflow {
+        margin-top: 5px;
+        transition: all 0.3s;
+        height: 23px;
+        opacity: 0;
+        transform: translateY(-10px);
+        span {
+          margin: 0 0 0 10px;
+        }
+      }
+
+      &_error {
+        color: color(error);
+        border-radius: 8px;
+        font-size: 12px;
+        position: relative;
+
+        .overflow__auto {
+          margin-top: 5px;
+          opacity: 1;
+          transition: all 0.3s;
+          transform: translateY(0px);
+          height: 23px;
+        }
+
+        .input__item {
+          border-color: red;
+        }
+      }
+    }
+  }
+
   
   //todo
   .add_input {
