--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -22,8 +22,8 @@
   }
 
   &.white {
-    background: rgba(255,255,255,0.9);
-    backdrop-filter: blur(10px);
+    background: rgba(255,255,255,01);
+    //backdrop-filter: blur(10px);
   }
   &_head {
     display: flex;
