--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -54,10 +54,59 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
-        @include ipadScreen {
-
-        }
       }
     }
+    .edit_pen_box {
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+    }
+  }
+}
+
+.add_info {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.add_info_banner {
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 360px;
+  width: 50%;
+  .added_input {
+    position: relative;
+    background-color: #009247;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 5vw;
+    width: 5vw;
+    .added_label {
+      background-image: url('/images/add.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 10px;
+      display: block;
+      width: 70%;
+      height: 70%;
+      cursor: pointer;
+      z-index: 2;
+      &_span {
+        display: none;
+      }
+    }
+  }
+}
+
+.add_input {
+  width: 50%;
+  &__item {
+    margin: 30px 0;
   }
 }
