--- a/features/equipment/equipmentPage/utp/UtpModalAction.module.scss
+++ b/features/equipment/equipmentPage/utp/UtpModalAction.module.scss
@@ -22,11 +22,55 @@
         width: 100%;
         line-height: 14px;
       }
-      svg{
+
+      svg {
         cursor: pointer;
       }
     }
   }
+
+  .box_context {
+    height: 360px;
+    overflow: hidden;
+    display: grid;
+    flex-direction: row;
+    gap: 10px;
+    grid-template-columns: 1fr 50px 1fr;
+
+    .block_action_button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .block_tree {
+      overflow: auto;
+      ul{
+        li{
+          cursor: pointer;
+          display: block;
+        }
+      }
+
+    }
+
+    .block_selected {
+      border: none;
+
+      .selected_option {
+        height: 100%;
+        width: 100%;
+        border: none;
+
+        option {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
   .block_button {
     margin-top: 10px;
     display: flex;
