--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,6 +11,7 @@ $colors: (
         green: #009247,
         gray: #505050,
         error: #ff0000,
+        selected:#007aff,
         text:#212121,
         text-hover:#60955B,
         shadow: #a5a5a5,
