--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -109,7 +109,15 @@
         overflow: hidden;
       }
     }
-
+    &__modal_edit_text_1200 {
+      width: 1200px;
+      height: 500px;
+      overflow: hidden;
+      background: color(white);
+      .modal_body{
+        overflow: hidden;
+      }
+    }
     &__empty_modal {
       width: 80%;
       background: transparent;
