--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -104,9 +104,29 @@
   }
 }
 
-.add_input {
+.add_input_block {
   width: 50%;
-  &__item {
-    margin: 30px 0;
+  .add_input {
+    margin-bottom: 20px;
+    position: relative;
+    span {
+      cursor: pointer;
+      position: absolute;
+      right: 0;
+      top: 35%;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      svg {
+        opacity: 0.4;
+        transition: all 0.1s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+  }
+  textarea {
+    height: 295px;
   }
 }
