--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -343,10 +343,11 @@
 
 .add_obr {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 334px));
   grid-gap: 18px;
   gap: 18px;
   margin: 30px 0 130px 0;
+
   @include phoneScreen {
     margin: 20px 0 80px 0;
     gap: 8px;
