--- a/components/textarea/Textarea.module.scss
+++ b/components/textarea/Textarea.module.scss
@@ -13,6 +13,7 @@
     background-color: color(white);
     border-color: rgb(207, 207, 207);
     box-sizing: border-box;
+    font-size: 14px;
     &::placeholder {
       font-size: 14px;
     }
