--- a/features/equipment/equipmentPage/utp/gallery.module.scss
+++ b/features/equipment/equipmentPage/utp/gallery.module.scss
@@ -2,16 +2,37 @@
 @import 'styles/variables.scss';
 
 .box_gallery_container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: max-content;
   flex-wrap: wrap;
   gap: 10px;
+  height: 350px;
+  overflow: auto;
+  align-items: flex-start;
 
   .cell_gallery {
     height: 100px;
-    width: 150px;
+    width: 146px;
     position: relative;
     overflow: hidden;
     border-radius: 8px;
+    box-shadow: 0 0 5px rgba(20, 20, 20, 0.5);
+
+    .delete_icon {
+      position: absolute;
+      cursor: pointer;
+      top: 5px;
+      right: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      background-color: color(white);
+      box-shadow: 0 0 10px rgba(20, 20, 20, 0.5);
+    }
 
     img {
       width: 100%;
@@ -28,7 +49,7 @@
     align-items: center;
     justify-content: center;
     height: 100px;
-    width: 150px;
+    width: 146px;
     cursor: pointer;
 
     .added_input {
@@ -63,4 +84,11 @@
       }
     }
   }
+}
+
+.block_button {
+  margin-top: 10px;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
 }
