--- a/features/equipment/catalog/ModalAddProduction.module.scss
+++ b/features/equipment/catalog/ModalAddProduction.module.scss
@@ -3,11 +3,54 @@
 
 .add_prod {
   margin: 0 auto;
+
   &_banner_items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 150px));
     gap: 15px;
     margin-bottom: 30px;
+  }
+
+  .cell_gallery {
+    height: 100px;
+    width: 146px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(20, 20, 20, 0.5);
+
+    .delete_icon {
+      position: absolute;
+      cursor: pointer;
+      top: 5px;
+      right: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      background-color: color(white);
+      box-shadow: 0 0 10px rgba(20, 20, 20, 0.5);
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      border: 1px solid;
+      object-fit: cover;
+    }
+  }
+
+  .block_desc {
+    margin-bottom: 20px;
+
+  }
+  h2 {
+    color: color(gray);
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: normal;
   }
   &_banner {
     background-color: #f1f1f1;
@@ -15,7 +58,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 300px;
+    height: 100px;
+    cursor: pointer;
+
     .added_input {
       position: relative;
       background-color: #009247;
@@ -23,28 +68,35 @@
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      height: 5vw;
-      width: 5vw;
+      height: 50px;
+      width: 50px;
+
       .added_label {
-        background-image: url('/images/add.svg');
+
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: 10px;
         display: block;
-        width: 70%;
-        height: 70%;
         cursor: pointer;
         z-index: 2;
+
+        svg {
+          height: 30px;
+          width: 30px;
+        }
+
         &_span {
           display: none;
         }
       }
     }
   }
+
   &_info {
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
+
     &_left,
     &_right {
       width: 50%;
@@ -54,21 +106,26 @@
       height: 250px;
       overflow: hidden;
       overflow-y: auto;
+
       button {
         width: 130px;
       }
     }
+
     &_left {
       ul {
         overflow: auto;
       }
     }
+
     &_input {
       position: relative;
       margin-bottom: 12px;
+
       input {
         padding-right: 50px;
       }
+
       span {
         cursor: pointer;
         position: absolute;
@@ -77,9 +134,11 @@
         display: flex;
         align-items: center;
         gap: 8px;
+
         svg {
           opacity: 0.4;
           transition: all 0.1s ease;
+
           &:hover {
             opacity: 1;
           }
@@ -87,6 +146,7 @@
       }
     }
   }
+
   &_text {
     width: 100%;
     box-sizing: border-box;
@@ -98,14 +158,17 @@
     border: none;
     margin-bottom: 20px;
   }
+
   &_button {
     margin-top: 30px;
   }
+
   &_block {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(300px, auto));
   }
+
   &_second,
   &_first {
     background-color: #f1f1f1;
