--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -67,17 +67,57 @@
 .add_info {
   display: flex;
   gap: 20px;
-  margin-bottom: 30px;
+  margin: 30px 0;
 }
 
 .add_info_banner {
   background-color: #f1f1f1;
-  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 360px;
+  height: 358px;
+  overflow: hidden;
   width: 50%;
+  position: relative;
+  .delete_img {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 4;
+    background: color(white);
+    padding: 5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+    svg {
+      width: 16px;
+      height: 16px;
+      transition: all 0.2s ease;
+    }
+  }
+  .added_input_label {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  .image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+  }
   .added_input {
     position: relative;
     background-color: #009247;
@@ -104,8 +144,27 @@
   }
 }
 
+.button {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .add_input_block {
   width: 50%;
+  &_left {
+    margin-bottom: 35px;
+    width: 100%;
+    .add_textarea {
+      box-sizing: border-box;
+      input {
+        border: 1px solid #bcbdc0;
+        padding: 10px;
+        box-sizing: border-box;
+        width: 100%;
+      }
+    }
+  }
+
   .add_input {
     margin-bottom: 20px;
     position: relative;
