--- a/features/decision/DecisionPage/DecisionPage.module.scss
+++ b/features/decision/DecisionPage/DecisionPage.module.scss
@@ -17,8 +17,20 @@
   gap: 20px;
   align-items: flex-start;
   padding: 50px 0;
+  position: relative;
   @media (max-width: 1200px) {
     flex-direction: column;
+  }
+
+  .button_editor {
+    position: absolute;
+    bottom: 40px;
+    right: 0;
+    border: 1px solid #9d9d9d;
+    border-radius: 50%;
+    &:hover {
+      border-color: color(white);
+    }
   }
 
   &_img {
