--- a/components/textarea/Textarea.module.scss
+++ b/components/textarea/Textarea.module.scss
@@ -5,9 +5,10 @@
   overflow: hidden;
   width: 100%;
   textarea {
+    resize: vertical;
     overflow: hidden;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     padding: 10px;
     border-radius: 6px;
     background-color: color(white);
