--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -66,6 +66,7 @@
 
 .add_info {
   display: flex;
+  align-items: flex-start;
   gap: 20px;
   margin: 30px 0;
 }
@@ -168,6 +169,9 @@
   .add_input {
     margin-bottom: 20px;
     position: relative;
+    input {
+      padding-right: 25px;
+    }
     span {
       cursor: pointer;
       position: absolute;
@@ -186,6 +190,6 @@
     }
   }
   textarea {
-    height: 295px !important;
+    min-height: 295px !important;
   }
 }
