--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -10,15 +10,51 @@
     margin-bottom: 20px;
     text-transform: uppercase;
   }
-  &_banner {
-    margin-bottom: 40px;
-    background: #f1f1f1;
-    border-radius: 10px;
+
+  .added_news_banner {
+    background-color: #f1f1f1;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 530px;
+    overflow: hidden;
     width: 100%;
-    height: 580px;
+    position: relative;
+    margin-bottom: 50px;
+    .delete_img {
+      position: absolute;
+      left: 10px;
+      top: 10px;
+      z-index: 4;
+      background: #FFF;
+      padding: 5px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      opacity: 0.5;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .image {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 3;
+    }
+    .added_input_label {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
     .added_input {
       position: relative;
       background-color: #009247;
@@ -26,24 +62,27 @@
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      height: 10vw;
-      width: 10vw;
-      .added_label {
-        background-image: url('/images/add.svg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        border-radius: 10px;
-        display: block;
-        width: 70%;
-        height: 70%;
-        cursor: pointer;
-        z-index: 2;
-        &_span {
-          display: none;
-        }
-      }
+      height: 8vw;
+      width: 8vw;
+    }
+    .added_label {
+      background-image: url("/images/add.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 10px;
+      display: block;
+      width: 70%;
+      height: 70%;
+      cursor: pointer;
+      z-index: 2;
+    }
+    .added_label_span {
+      display: none;
     }
   }
+
+
+
   &_container {
     margin-bottom: 50px;
     .input_block {
@@ -117,12 +156,9 @@
   .add_video {
     margin: 80px 0 0 0;
   }
-
   .add__form__item {
-
     &__input {
       font-size: 12px;
-
       .overflow {
         margin-top: 5px;
         transition: all 0.3s;
@@ -154,7 +190,6 @@
       }
     }
   }
-
   
   //todo
   .add_input {
