--- a/components/icons/includes/StylesIcon.module.scss
+++ b/components/icons/includes/StylesIcon.module.scss
@@ -86,6 +86,27 @@
   }
 }
 
+.close__block {
+  background-color: color(white);
+  padding: 5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  opacity: 0.8;
+  &:hover {
+    opacity: 1;
+  }
+  svg {
+    width: 16px;
+    height: 16px;
+  }
+}
+
 
 
 
