--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -68,7 +68,11 @@
   display: flex;
   align-items: flex-start;
   gap: 20px;
-  margin: 30px 0;
+  margin: 30px 0 0 0;
+}
+
+.preview {
+  padding: 225px 0 !important;
 }
 
 .add_info_banner {
@@ -76,7 +80,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 358px;
+  padding: 190px 0;
+  //height: 450px;
   overflow: hidden;
   width: 50%;
   position: relative;
@@ -85,25 +90,6 @@
     right: 10px;
     top: 10px;
     z-index: 4;
-    background: color(white);
-    padding: 5px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    opacity: 0.5;
-    &:hover {
-      opacity: 1;
-    }
-    svg {
-      width: 16px;
-      height: 16px;
-      transition: all 0.2s ease;
-    }
   }
   .added_input_label {
     width: 100%;
@@ -118,6 +104,7 @@
     width: 100%;
     height: 100%;
     z-index: 3;
+    object-fit: fill;
   }
   .added_input {
     position: relative;
@@ -167,15 +154,20 @@
   }
 
   .add_input {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     position: relative;
     input {
-      padding-right: 25px;
+      border: 1px solid #d2d2d2;
+      padding: 10px;
+      border-radius: 5px;
+      &:focus {
+        border: 1px solid color(green);
+      }
     }
     span {
       cursor: pointer;
       position: absolute;
-      right: 0;
+      right: 10px;
       top: 35%;
       display: flex;
       align-items: center;
@@ -189,7 +181,45 @@
       }
     }
   }
+  .short_description {
+    margin-bottom: 10px;
+    textarea {
+      min-height: 95px !important;
+    }
+  }
   textarea {
     min-height: 295px !important;
+  }
+}
+
+.add_input_meta {
+  margin-bottom: 30px;
+  &_input {
+    position: relative;
+    input {
+      border: 1px solid #d2d2d2;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      &:focus {
+        border: 1px solid color(green);
+      }
+    }
+    span {
+      cursor: pointer;
+      position: absolute;
+      right: 10px;
+      top: 32%;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      svg {
+        opacity: 0.4;
+        transition: all 0.1s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
