--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -5,9 +5,14 @@
   margin: 0 0 130px 0;
 }
 
-a {
+.news_editor_position {
+  position: relative;
+}
+
+.news_list {
   &:nth-child(odd) {
     .news_container_item_right {
+      position: relative;
       order: 0;
       border-radius: 10px 0 0 10px;
       overflow: hidden;
@@ -67,9 +72,9 @@ a {
         margin-top: 20px;
       }
 
-      &:last-child {
-        margin-bottom: 60px;
-      }
+      //&:last-child {
+      //  margin-bottom: 60px;
+      //}
 
       @include ipadScreen {
         row-gap: 0;
@@ -248,6 +253,18 @@ a {
         }
       }
     }
+  }
+}
+
+.news_editor {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  border-radius: 50%;
+  border: 1px solid #929292;
+  transition: all 0.2s ease;
+  &:hover {
+    border-color: transparent;
   }
 }
 
