--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -15,33 +15,41 @@
   @include ipadScreen {
     flex-direction: column;
   }
+
   .disabled_active {
     border-radius: 10px;
+
     &:hover {
       background: color(green);
       color: color(white);
+
       path {
         fill: #fff;
       }
     }
-    button{
+
+    button {
       display: flex;
       align-items: center;
       gap: 12px;
       transition: none !important;
     }
+
     span {
       svg {
         width: 18px;
       }
+
       path {
         fill: white;
       }
     }
   }
+
   .disabled {
     cursor: not-allowed;
     border-radius: 10px;
+
     button {
       display: flex;
       align-items: center;
@@ -51,6 +59,7 @@
       transition: none !important;
     }
   }
+
   h1 {
     text-align: left;
     text-transform: uppercase;
@@ -64,6 +73,7 @@
       text-align: center;
     }
   }
+
   &:focus-within {
     label {
       transform: translateY(-30px) scale(1);
@@ -134,6 +144,11 @@
       gap: 0;
     }
 
+    &.archived {
+      border: 1px solid color(grey);
+      opacity: 0.2;
+    }
+
     &__images {
       height: 100%;
       width: 28%;
@@ -165,6 +180,9 @@
       }
 
       &_title {
+        display: flex;
+        justify-content: space-between;
+
         p {
           font-weight: 400;
           font-size: 18px;
@@ -180,6 +198,38 @@
           height: 78px;
           @include phoneScreen {
             text-align: center;
+          }
+        }
+
+        span {
+          position: absolute;
+          right: 10px;
+          top: 10px;
+          cursor: pointer;
+          border: 1px solid color(green);
+          border-radius: 50%;
+          width: 30px;
+          height: 30px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          transition: all 0.3s;
+
+          svg {
+            path {
+              fill: color(dark);
+            }
+          }
+
+          &:hover {
+            transition: all 0.3s;
+            background-color: color(green);
+
+            svg {
+              path {
+                fill: color(white)
+              }
+            }
           }
         }
       }
