--- a/components/own_object/OwnObject.module.scss
+++ b/components/own_object/OwnObject.module.scss
@@ -1,13 +1,12 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
-.container{
+.container {
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 20px 20px;
-  padding: 0 10px;
   grid-template-areas:
     "col1 col2 col3"
     "col4 col5 col5";
@@ -130,5 +129,10 @@
       }
     }
   }
+}
+.add__obj__button {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
 }
 
